Correctly aligned items in the Widget preview sidebar

--- a/client/app/css/editor-page.scss
+++ b/client/app/css/editor-page.scss
@@ -9,8 +9,12 @@
 }
 
 .page-preview {
-    .row, .row-preview {
+    .row, .border-row-preview {
         border-left: 5px solid blue;
+    }
+
+    .widget-row-preview > div {
+	    padding-left: 5px;
     }
 
     .blueprint {
